# nano-claude-code

./: README.md  agent.py  cheetahclaws.py  cloudsave.py  config.py  context.py  demo.py  nano_claude.py  providers.py  pyproject.toml  tool_registry.py  tools.py
demos/: make_brainstorm_demo.py  make_demo.py  make_proactive_demo.py
docs/: README.DE.MD  architecture.md
memory/: store.py  tools.py
multi_agent/: subagent.py
plugin/: __init__.py  store.py  types.py
skill/: loader.py
tests/: test_voice.py
voice/: __init__.py
